--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
   <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
-    
+    <main>
+        <header>Reszponzív</header>
+        <nav>
+            <ul>
+                <li><a href="#">Kezdőlap</a></li> 
+                <li><a href="#">Egyik oldal</a></li>
+                <li><a href="#">Galéria</a></li>
+            </ul>
+        </nav>
+        <article>
+            <section>
+                <div id="nagykep"><img src="kepek/_MG_2995.jpg" alt="mountain"></div>
+            </section>
+            <h2>Galéria</h2>
+            <section>
+                <div class="kepek"><img src="atalakitott_kepek/_DSC8090_600.jpg" alt="lomposaljú fák"></div>
+                <div class="kepek"><img src="atalakitott_kepek/_DSC6696_600.jpg" alt="folyó"></div>
+                <div class="kepek"><img src="atalakitott_kepek/_DSC8235_600.jpg" alt="panoráma"></div>
+                <div class="kepek"><img src="atalakitott_kepek/_DSC9920_600.jpg" alt="vízesés"></div>
+                <div class="kepek"><img src="atalakitott_kepek/_MG_1121_1_600.jpg" alt="kövek"></div>
+                <div class="kepek"><img src="atalakitott_kepek/_MG_1357_600.jpg" alt="csermely"></div>
+                <div class="kepek"><img src="atalakitott_kepek/_MG_1420_2_600.jpg" alt="csermely2"></div>
+                <div class="kepek"><img src="atalakitott_kepek/_MG_2995_600.jpg" alt="hegy"></div>
+            </section>
+        </article>
+        <footer>
+            <p>Ütő Imre</p>
+        </footer>
+    </main>
 </body>
 </html>
